descomplicando-kubernetes/day-11/ingress-gambiarra/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / #quando bater no ingress, redireciona para o path / do container (nginx/aplicação)
spec:
  rules:
  - http:
      paths:
      - path: /giropops-senhas #quando bater no path ip-do-ingress/giropops-senhas, redireciona para o service giropops-senhas, dps pods
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
